cmake_minimum_required(VERSION 3.19)
project(my_piscine)

set(CMAKE_CXX_STANDARD 98)

add_executable(my_piscine

#        module_00/ex01/Contact.class.cpp
#        module_00/ex01/Contact.class.hpp
#        module_00/ex01/PhoneBook.class.cpp
#        module_00/ex01/PhoneBook.class.hpp
#        module_00/ex01/main.cpp

        module_02/ex00/Fixed.class.cpp
        module_02/ex00/Fixed.class.hpp
        module_02/ex00/main.cpp


        )