cmake_minimum_required(VERSION 3.19)
project(my_piscine)

set(CMAKE_CXX_STANDARD 98)

add_executable(my_piscine

#        module_00/ex01/Contact.class.cpp
#        module_00/ex01/Contact.class.hpp
#        module_00/ex01/PhoneBook.class.cpp
#        module_00/ex01/PhoneBook.class.hpp
#        module_00/ex01/main.cpp

#        module_02/ex00/Fixed.class.cpp
#        module_02/ex00/Fixed.class.hpp
#        module_02/ex00/main.cpp

#        module_02/ex01/Fixed.class.cpp
#        module_02/ex01/Fixed.class.hpp
#        module_02/ex01/main.cpp

#        module_02/ex02/Fixed.class.cpp
#        module_02/ex02/Fixed.class.hpp
#        module_02/ex02/main.cpp

        module_02/ex03/Fixed.class.cpp
        module_02/ex03/Fixed.class.hpp
        module_02/ex03/Point.class.cpp
        module_02/ex03/Point.class.hpp
        module_02/ex03/bsp.cpp
        module_02/ex03/main.cpp

        )