cmake_minimum_required(VERSION 3.19)
project(my_piscine)

set(CMAKE_CXX_STANDARD 98)

add_executable(my_piscine

#        module_00/ex01/Contact.class.cpp
#        module_00/ex01/Contact.class.hpp
#        module_00/ex01/PhoneBook.class.cpp
#        module_00/ex01/PhoneBook.class.hpp
#        module_00/ex01/main.cpp

#        module_02/ex00/Fixed.class.cpp
#        module_02/ex00/Fixed.class.hpp
#        module_02/ex00/main.cpp

#        module_02/ex01/Fixed.class.cpp
#        module_02/ex01/Fixed.class.hpp
#        module_02/ex01/main.cpp

#        module_02/ex02/Fixed.class.cpp
#        module_02/ex02/Fixed.class.hpp
#        module_02/ex02/main.cpp

#        module_02/ex03/Fixed.class.cpp
#        module_02/ex03/Fixed.class.hpp
#        module_02/ex03/Point.class.cpp
#        module_02/ex03/Point.class.hpp
#        module_02/ex03/bsp.cpp
#        module_02/ex03/main.cpp

#        module_03/ex00/main.cpp
#        module_03/ex00/ClapTrap.class.cpp
#        module_03/ex00/ClapTrap.class.hpp

#        module_03/ex01/main.cpp
#        module_03/ex01/ClapTrap.class.cpp
#        module_03/ex01/ClapTrap.class.hpp
#        module_03/ex01/ScavTrap.class.cpp
#        module_03/ex01/ScavTrap.class.hpp

#        module_03/ex02/main.cpp
#        module_03/ex02/ClapTrap.class.cpp
#        module_03/ex02/ClapTrap.class.hpp
#        module_03/ex02/ScavTrap.class.cpp
#        module_03/ex02/ScavTrap.class.hpp
#        module_03/ex02/FlagTrap.class.cpp
#        module_03/ex02/FlagTrap.class.hpp

#        module_03/ex03/main.cpp
#        module_03/ex03/ClapTrap.class.cpp
#        module_03/ex03/ClapTrap.class.hpp
#        module_03/ex03/ScavTrap.class.cpp
#        module_03/ex03/ScavTrap.class.hpp
#        module_03/ex03/FlagTrap.class.cpp
#        module_03/ex03/FlagTrap.class.hpp
#        module_03/ex03/DiamondTrap.class.cpp
#        module_03/ex03/DiamondTrap.class.hpp

#        module_04/ex01/main.cpp
#        module_04/ex01/Animal.class.cpp
#        module_04/ex01/Animal.class.hpp
#        module_04/ex01/Dog.class.cpp
#        module_04/ex01/Dog.class.hpp
#        module_04/ex01/Cat.class.cpp
#        module_04/ex01/Cat.class.hpp
#        module_04/ex01/Brain.class.cpp
#        module_04/ex01/Brain.class.hpp

#        module_04/ex03/AMateria.class.cpp
#        module_04/ex03/AMateria.class.hpp
#        module_04/ex03/Cure.class.cpp
#        module_04/ex03/Cure.class.hpp
#        module_04/ex03/Ice.class.cpp
#        module_04/ex03/Ice.class.hpp
#        module_04/ex03/IMateriaSource.class.hpp
#        module_04/ex03/MateriaSource.class.hpp
#        module_04/ex03/MateriaSource.class.cpp
#        module_04/ex03/main.cpp
#        module_04/ex03/ICharacter.class.hpp
#        module_04/ex03/Character.class.cpp
#        module_04/ex03/Character.class.hpp

#        module_07/ex00/main.cpp
#        module_07/ex00/whatever.hpp

        module_07/ex01/main.cpp
        module_07/ex01/iter.hpp

        )